angular integration for equipment details

--- a/src/app/views/equi-details/equi-details.html
+++ b/src/app/views/equi-details/equi-details.html
@@ -843,7 +843,7 @@
                                 </span>
                                  <span class="price clearfix">
                                     <small class="pull-left">Weekly</small>
-                                    <span class="pull-right">$${{mdl.equi.weekly_price}}</span>
+                                    <span class="pull-right">${{mdl.equi.weekly_price}}</span>
                                 </span>
                                  <span class="price clearfix">
                                     <small class="pull-left">Monthly</small>
