--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -27,7 +27,7 @@
             <div class="header-search col-sm-offset-4 col-md-offset-2 hidden-mobile">
                 <form method="post" role="form">
                     <div class="col-xs-6">
-                        <input type="text" name="where" value="" placeholder="Equipment Name, Part Name, etc.." class="input-text white-bg full-width where" />
+                        <input type="text" ng-model="mainMdl.searchText" name="where" value="" placeholder="Equipment Name, Part Name, etc.." class="input-text white-bg full-width where" />
                     </div>
                     <div class="col-xs-6">
                         <div class="col-xs-3">
