--- a/src/app/views/account/account.html
+++ b/src/app/views/account/account.html
@@ -1,5 +1,15 @@
-<div> Tab 1</div>
-<div> Tab 2</div>
-<div> Tab 3</div>
-<div> Container </div>
-<ui-view/>
+<div class="tab-container full-width-style arrow-left dashboard">
+    <ul class="tabs">
+        <li class="active"><a data-toggle="tab" href="#dashboard"><i class="soap-icon-anchor circle"></i>Dashboard</a></li>
+        <li class=""><a data-toggle="tab" href="#profile"><i class="soap-icon-user circle"></i>Profile</a></li>
+        <li class=""><a data-toggle="tab" href="#booking"><i class="soap-icon-businessbag circle"></i>Manage Equipments</a></li>
+        <li class=""><a data-toggle="tab" href="#wishlist"><i class="soap-icon-wishlist circle"></i>Manage Jobsites</a></li>
+        <li class=""><a data-toggle="tab" href="#travel-stories"><i class="soap-icon-conference circle"></i>Favourited</a></li>
+        <li class=""><a data-toggle="tab" href="#travel-stories"><i class="soap-icon-conference circle"></i>Bookings</a></li>
+        <li class=""><a data-toggle="tab" href="#travel-stories"><i class="soap-icon-conference circle"></i>Requests</a></li>
+        <li class=""><a data-toggle="tab" href="#settings"><i class="soap-icon-settings circle"></i>Settings</a></li>
+    </ul>
+<div class="tab-content">
+    <ui-view/>
+</div>
+</div>
