--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -77,7 +77,7 @@
             </ul>
         </div>
     </div>
-    <div ui-view></div>
+    <div id="main" ui-view></div>
 
     <footer id="footer">
         <div class="footer-wrapper">
