fixes to dashboard

--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -77,8 +77,11 @@
             </ul>
         </div>
     </div>
-    <div id="main" ui-view></div>
-
+    <section id="content" class="gray-area">
+        <div class="container">
+            <div id="main" ui-view></div>
+        </div>
+    </section>
     <footer id="footer">
         <div class="footer-wrapper">
             <div class="container">
