--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -47,7 +47,7 @@
 </div>
 
 <div class="container">
-<div id="main">
+<div id="main" style="margin-top: 132px;">
 <h1 class="page-title white-color">Rent Equipments with us in Comfort !</h1>
 
 <h2 class="page-description col-md-6 no-float no-padding white-color">We're bringing you a modern, comfortable and easy way
