--- a/src/app/views/account/profile/profile.html
+++ b/src/app/views/account/profile/profile.html
@@ -1,4 +1,4 @@
-<div id="profile" class="tab-pane fade">
+<div id="profile" class="tab-pane fade in active">
 <div class="view-profile">
     <article class="image-box style2 box innerstyle personal-details">
         <figure>
