--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -57,17 +57,17 @@
 <div class="search-box">
 <ul class="search-tabs clearfix">
     <li ng-class="{'active':mdl.tab=='rent'}" class="advanced-search">
-        <a ng-click="mdl.tab='rent'" data-toggle="tab">
+        <a ng-click="mdl.tab='rent'" >
             <i class="soap-icon-shopping-3"></i><span>RENT</span>
         </a>
     </li>
     <li ng-class="{'active':mdl.tab=='buy'}" class="advanced-search">
-        <a ng-click="mdl.tab='buy'" data-toggle="tab">
+        <a ng-click="mdl.tab='buy'" >
             <i class="soap-icon-shopping-1 takeoff-effect"></i><span>BUY</span>
         </a>
     </li>
     <li ng-class="{'active':mdl.tab=='search'}" class="advanced-search visible-lg">
-        <a ng-click="mdl.tab='search'" data-toggle="tab"><span>Advanced Search</span></a>
+        <a ng-click="mdl.tab='search'" ><span>Advanced Search</span></a>
     </li>
 </ul>
 
