--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -13,7 +13,7 @@
                     <li>
                         <a class="pointerhover">CART(3 items)</a>
                     </li>
-                    <li><a ng-click="openSignUp()" class="soap-popupbox">ACCOUNT</a></li>
+                    <li><a ng-click="accountClick()" class="soap-popupbox">ACCOUNT</a></li>
 
                 </ul>
             </div>
@@ -152,13 +152,13 @@
                             <a href="#" class="contact-email">help@travelo.com</a>
                         </address>
                         <ul class="social-icons clearfix">
-                            <li class="twitter"><a title="twitter" href="#" data-toggle="tooltip"><i class="soap-icon-twitter"></i></a></li>
-                            <li class="googleplus"><a title="googleplus" href="#" data-toggle="tooltip"><i class="soap-icon-googleplus"></i></a></li>
-                            <li class="facebook"><a title="facebook" href="#" data-toggle="tooltip"><i class="soap-icon-facebook"></i></a></li>
-                            <li class="linkedin"><a title="linkedin" href="#" data-toggle="tooltip"><i class="soap-icon-linkedin"></i></a></li>
-                            <li class="vimeo"><a title="vimeo" href="#" data-toggle="tooltip"><i class="soap-icon-vimeo"></i></a></li>
-                            <li class="dribble"><a title="dribble" href="#" data-toggle="tooltip"><i class="soap-icon-dribble"></i></a></li>
-                            <li class="flickr"><a title="flickr" href="#" data-toggle="tooltip"><i class="soap-icon-flickr"></i></a></li>
+                            <li class="twitter"><a title="twitter"  ><i class="soap-icon-twitter"></i></a></li>
+                            <li class="googleplus"><a title="googleplus"  ><i class="soap-icon-googleplus"></i></a></li>
+                            <li class="facebook"><a title="facebook"  ><i class="soap-icon-facebook"></i></a></li>
+                            <li class="linkedin"><a title="linkedin"  ><i class="soap-icon-linkedin"></i></a></li>
+                            <li class="vimeo"><a title="vimeo"  ><i class="soap-icon-vimeo"></i></a></li>
+                            <li class="dribble"><a title="dribble"  ><i class="soap-icon-dribble"></i></a></li>
+                            <li class="flickr"><a title="flickr"  ><i class="soap-icon-flickr"></i></a></li>
                         </ul>
                     </div>
                 </div>
