fixing accounts page

--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -3906,7 +3906,7 @@ ul.search-tabs {
     figure { margin-bottom: 20px; }
     .term-description { margin-bottom: 0; }
   }
-  .edit-profile { display: none; }
+  .edit-profile {  }
   .term-description {
     dt, dd { float: none; display: inline-block; float: none; width: 50%; vertical-align: top; }
     dt { clear: none; }
