--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -10,7 +10,7 @@
         </nav>
         <ul class="quick-menu pull-right clearfix">
 
-            <li><a  class="soap-popupbox">MY ACCOUNT</a></li>
+            <li><a  class="soap-popupbox" ng-click="accountClick()">ACCOUNT</a></li>
 
         </ul>
     </div>
