--- a/src/app/views/account/profile/profile.html
+++ b/src/app/views/account/profile/profile.html
@@ -1,22 +1,22 @@
 <div id="profile" class="tab-pane fade in active">
-<div class="view-profile">
+<div ng-show="!profileMdl.edit" class="view-profile">
     <article class="image-box style2 box innerstyle personal-details">
         <figure>
             <a title="" href="#"><img width="270" height="263" alt="" src="http://placehold.it/270x263"></a>
         </figure>
         <div class="details">
-            <a href="#" class="button btn-mini pull-right edit-profile-btn">EDIT PROFILE</a>
-            <h2 class="box-title fullname">Hiren Kesariya</h2>
+            <a ng-click="editProfile()" class="button btn-mini pull-right edit-profile-btn">EDIT PROFILE</a>
+            <h2 class="box-title fullname">{{user.fullname}}</h2>
             <dl class="term-description">
-                <dt>user name:</dt><dd>hiren2hiren@gmail.com</dd>
+                <dt>user name:</dt><dd>{{user.email}}</dd>
                 <dt>first name:</dt><dd>Hiren</dd>
                 <dt>last name:</dt><dd>Kesariya</dd>
-                <dt>phone number:</dt><dd>1-800-123-45678</dd>
+                <dt>phone number:</dt><dd>{{user.phone}}</dd>
                 <dt>Date of birth:</dt><dd>21 May 1988</dd>
                 <dt>Street Address and number:</dt><dd>353 Third floor Avenue</dd>
                 <dt>Town / City:</dt><dd>Houston, texas</dd>
-                <dt>ZIP code:</dt><dd>75800-875</dd>
-                <dt>Country:</dt><dd>United States of america</dd>
+                <dt>ZIP code:</dt><dd>{{user.zip_code}}</dd>
+                <dt>Country:</dt><dd>United States of America</dd>
             </dl>
         </div>
     </article>
@@ -114,28 +114,28 @@
         </div>
     </div>
 </div>
-<div class="edit-profile">
-    <form class="edit-profile-form">
+<div ng-show="profileMdl.edit" class="edit-profile">
+    <form validate-form name="profileMdl.form" novalidate ng-submit="updateProfile()" class="edit-profile-form">
         <h2>Personal Details</h2>
         <div class="col-sm-9 no-padding no-float">
             <div class="row form-group">
                 <div class="col-sms-6 col-sm-6">
                     <label>First Name</label>
-                    <input type="text" class="input-text full-width" placeholder="">
+                    <input type="text" name="firstname" required class="input-text full-width" placeholder="first name">
                 </div>
                 <div class="col-sms-6 col-sm-6">
                     <label>Last Name</label>
-                    <input type="text" class="input-text full-width" placeholder="">
+                    <input type="text" name="lastname" required class="input-text full-width" placeholder="last name">
                 </div>
             </div>
             <div class="row form-group">
                 <div class="col-sms-6 col-sm-6">
                     <label>Email Address</label>
-                    <input type="text" class="input-text full-width" placeholder="">
+                    <input type="text" name="email" required class="input-text full-width" placeholder="email address">
                 </div>
                 <div class="col-sms-6 col-sm-6">
                     <label>Verify Email Address</label>
-                    <input type="text" class="input-text full-width" placeholder="">
+                    <input type="text" class="input-text full-width" placeholder="verify email">
                 </div>
             </div>
             <div class="row form-group">
@@ -150,7 +150,7 @@
                 </div>
                 <div class="col-sms-6 col-sm-6">
                     <label>Phone Number</label>
-                    <input type="text" class="input-text full-width" placeholder="">
+                    <input type="text" name="phone" required class="input-text full-width" placeholder="">
                 </div>
             </div>
             <div class="row form-group">
@@ -232,7 +232,8 @@
                 <textarea rows="5" class="input-text full-width" placeholder="please tell us about you"></textarea>
             </div>
             <div class="from-group">
-                <button type="submit" class="btn-medium col-sms-6 col-sm-4">UPDATE SETTINGS</button>
+                <button type="submit" ng-click="updateProfile()" class="btn-medium col-sms-6 col-sm-4">UPDATE</button>
+                <button ng-click="cancelEdit()" class="btn-medium btn-default col-sms-6 col-sm-4">CANCEL</button>
             </div>
 
         </div>
