minor fix for home link

--- a/src/app/views/home/home.html
+++ b/src/app/views/home/home.html
@@ -21,7 +21,7 @@
 
 <div class="container">
     <h1 class="logo navbar-brand">
-        <a href="index.html" title="Travelo - home">
+        <a ui-sref="home" >
             <img src="assets/images/logo.png" alt="Marketplace"/>
         </a>
     </h1>
