Manage Equipment Dashboard

--- a/src/app/views/account/equipments/equipments.html
+++ b/src/app/views/account/equipments/equipments.html
@@ -1,1 +1,124 @@
-<h1>Manage Equipments</h1>
+<div id="booking" class="tab-pane fade in">
+<div class="row block">
+    <div class="col-sm-6 col-md-3">
+        <a href="hotel-list-view.html">
+            <div class="fact blue">
+                <div class="numbers counters-box">
+                    <dl>
+                        <dt class="display-counter" data-value="3200">0</dt>
+                        <dd>Equipments You Own</dd>
+                    </dl>
+                    <i class="icon soap-icon-calendar-check"></i>
+                </div>
+                <div class="description">
+                    <i class="icon soap-icon-longarrow-right"></i>
+                    <span>View Equipments</span>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="col-sm-6 col-md-3">
+        <a href="flight-list-view.html">
+            <div class="fact yellow">
+                <div class="numbers counters-box">
+                    <dl>
+                        <dt class="display-counter" data-value="4509">0</dt>
+                        <dd>Your Jobsites</dd>
+                    </dl>
+                    <i class="icon soap-icon-departure"></i>
+                </div>
+                <div class="description">
+                    <i class="icon soap-icon-longarrow-right"></i>
+                    <span>Manage Jobsites</span>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="col-sm-6 col-md-3">
+        <a href="car-list-view.html">
+            <div class="fact red">
+                <div class="numbers counters-box">
+                    <dl>
+                        <dt class="display-counter" data-value="3250">0</dt>
+                        <dd>Favourited</dd>
+                    </dl>
+                    <i class="icon soap-icon-wishlist"></i>
+                </div>
+                <div class="description">
+                    <i class="icon soap-icon-longarrow-right"></i>
+                    <span>View Favourited Equipments</span>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="col-sm-6 col-md-3">
+        <a href="cruise-list-view.html">
+            <div class="fact green">
+                <div class="numbers counters-box">
+                    <dl>
+                        <dt class="display-counter" data-value="1570">0</dt>
+                        <dd>Service Tickets</dd>
+                    </dl>
+                    <i class="icon soap-icon-stories flip-effect"></i>
+                </div>
+                <div class="description">
+                    <i class="icon soap-icon-longarrow-right"></i>
+                    <span>Manage Requests</span>
+                </div>
+            </div>
+        </a>
+    </div>
+</div>
+<h2>Equipments You have Rented! <button class="btn-mini status pull-right">Add New Equipment</button></h2>
+<div class="filter-section gray-area clearfix">
+    <form>
+        <label class="radio radio-inline">
+            <input type="radio" name="filter" checked="checked" />
+            All Equipments
+        </label>
+        <label class="radio radio-inline">
+            <input type="radio" name="filter" />
+            On Rent
+        </label>
+        <label class="radio radio-inline">
+            <input type="radio" name="filter" />
+            Vacant
+        </label>
+    </form>
+</div>
+<div class="booking-history">
+    <div class="booking-info clearfix">
+        <div class="date">
+            <a href="ajax/slideshow-popup.html" class="hover-effect popup-gallery"><img width="72" height="72" alt="" src="images/shortcodes/listings/style01/hotel/1.png"></a>
+        </div>
+        <h4 class="box-title"><i class="icon soap-icon-departure takeoff-effect yellow-color circle"></i>Equipment Name Here<small>Job site Location</small></h4>
+        <dl class="info">
+            <dt>Time Utilization</dt>
+            <dd>47%</dd>
+            <dt>Dollar Utilization</dt>
+            <dd>82%</dd>
+        </dl>
+
+        <button class="btn-mini status">Delete</button>
+        <button class="btn-mini status">Edit</button>
+        <button class="btn-mini status">View</button>
+    </div>
+    <div class="booking-info clearfix cancelled">
+        <div class="date">
+            <a href="ajax/slideshow-popup.html" class="hover-effect popup-gallery"><img width="72" height="72" alt="" src="images/shortcodes/listings/style01/hotel/1.png"></a>
+        </div>
+        <h4 class="box-title"><i class="icon soap-icon-departure takeoff-effect yellow-color circle"></i>Equipment Name Here<small>Job site Location</small></h4>
+        <dl class="info">
+            <dt>Time Utilization</dt>
+            <dd>47%</dd>
+            <dt>Dollar Utilization</dt>
+            <dd>82%</dd>
+        </dl>
+
+        <button class="btn-mini status">Delete</button>
+        <button class="btn-mini status">Edit</button>
+        <button class="btn-mini status">View</button>
+    </div>
+</div>
+
+</div>
