--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -3851,7 +3851,7 @@ ul.search-tabs {
   img { height: 22px; }
 }
 
-#dashboard {
+#dashboard, #booking {
   .fact {
     color: #fff; margin-bottom: 20px;
     .numbers {
@@ -3950,7 +3950,7 @@ ul.search-tabs {
     .box-title, .status { margin-top: 20px; }
     .icon { font-size: 1.0833em; float: left; margin-right: 10px; }
     .box-title { float: left; small { padding-left: 43px; } }
-    .status { float: right; margin-right: 15px; background: $green-theme-color; }
+    .status { float: right; margin-right: 7px; background: $green-theme-color; }
     .info {
       float: right; padding-left: 15px; border-left: 1px solid #f5f5f5; text-transform: uppercase; padding-top: 2px; margin-bottom: 0; width: 140px;
       * { font-size: 0.8333em; font-weight: normal; }
