Manage Equipment Dashboard - minor changes

--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -4979,4 +4979,8 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; }
 .pointerhover {
   cursor: pointer;
 }
+.add-button {
+  font-size: 0.6em !important;
+  height: 25px !important;
+}
 /* custom style ends*/
