--- a/src/app/views/account/equipments/equipments.html
+++ b/src/app/views/account/equipments/equipments.html
@@ -69,7 +69,7 @@
         </a>
     </div>
 </div>
-<h2>Equipments You have Rented! <button class="btn-mini status pull-right">Add New Equipment</button></h2>
+<h2>Equipments You have Rented! <button class="btn-mini status pull-right add-button">Add New Equipment</button></h2>
 <div class="filter-section gray-area clearfix">
     <form>
         <label class="radio radio-inline">
