--- a/src/app/views/equi-details/equi-details.html
+++ b/src/app/views/equi-details/equi-details.html
@@ -833,7 +833,7 @@
         </figure>
         <div class="details">
             <h2 class="box-title">{{mdl.equi.name}}
-                <small><i class="soap-icon-departure yellow-color"></i><span class="fourty-space">Bay Area,CA</span>
+                <small><i class="soap-icon-departure yellow-color"></i><span class="fourty-space">{{mdl.equi.location.city.name}},{{mdl.equi.location.state.name}}</span>
                 </small>
             </h2>
                                 <span class="price clearfix">
